2014-06-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspQuery): Fix typos in previous
	commit, stop attached processes in all stop mode.
	(GdbServer::stopAttachedProcesses): Created as dummy.
	* src/GdbServer.h: Add stopAttachedProcesses, delete printfWrapper
	declaration, since no-longer needed.

2014-06-10  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* src/GdbServer.cpp (GdbServer::rspQuery): Add support for
	enabling non-stop mode.

2014-05-27  Jeremy Bennett  <jeremy.bennett@embecosm.com>

	* Makefile: Remove trailing spaces throughout. Add copyright
	header. Remove commented out things which are not relevant. Add
	-Werror, remote -fmessage-length. Simplify include dirs. Set
	correct source code list.
	* src/CoreId.cpp: Remove trailing spaces throughout.
	(CoreId::operator<): Remove const qualifier from return type.
	* src/CoreId.h: Likewise.
	* src/GdbServer.cpp: Remove trailing spaces throughout.
	(GdbServer::rspContinue): Mark except unused.
	(GdbServer::redirectStdioOnTrap): Use fprintf direct, not
	printfWrapper.
	(GdbServer::printfWrapper): Deleted.
	(GdbServer::doBacktrace): Check return value from call to system
	().
	* src/MemRange.cpp: Remove trailing spaces throughout.
	(MemRange::minAddr): Remove const qualifier from return type.
	(MemRange::maxAddr): Likewise.
	(MemRange::minRegAddr): Likewise.
	(MemRange::maxRegAddr): Likewise.
	* src/MemRange.h: Likewise.
	* src/MpHash.h: Remove trailing spaces throughout.
	* src/ProcessInfo.h: Remove trailing spaces throughout.
	* src/RspPacket.cpp: Remove trailing spaces throughout.
	* src/ServerInfo.h: Remove trailing spaces throughout.  No need to
	specify directory for HAL header include.
	* src/TargetControl.h: Remove trailing spaces throughout.
	* src/TargetControlHardware.cpp: Remove trailing spaces
	throughout.
	(TargetControlHardware::breakSignalHandler): Mark signum unused.
	* src/TargetControlHardware.h: Remove trailing spaces throughout.